# RL-CFR

./: README.md
data/: rlaction0_0.csv  rlstate0_0.csv  rlvalue0_0.csv
model/: actor.pt  critic.pt
src/:  retry.sh  .swp  ACTION.hpp  CFR  CFR.cpp  CFR.hpp  CFR2.hpp  CMakeLists.txt  Card.hpp  PBS.hpp  PS.hpp  README.md  TreeNode.hpp  utils.hpp  xx.cpp
src/build2/: CFR  CMakeCache.txt  Makefile  cmake_install.cmake
train/: AI_test.py  TD3.py  actor_train.py  explo_test.py  utils.py
